# rust-phylogeny

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
src/: cli.rs  lib.rs  main.rs
