[package]
name = "phylogeny"
version = "0.0.1"
authors = ["Ragnar Groot Koerkamp <ragnar.grootkoerkamp@gmail.com>"]
description = "A library and corresponding binaries for algorithms related to phylogenies."
homepage = "https://github.com/RagnarGrootKoerkamp/rust-phylogeny"
repository = "https://github.com/RagnarGrootKoerkamp/rust-phylogeny"
documentation = "https://docs.rs/phylogeny"
readme = "README.md"
license = "MIT"
edition = "2018"
include = ["src/*", "LICENSE.mc", "README.md"]

[lib]
name = "phylogeny"
path = "src/lib.rs"

[[bin]]
name = "rpt"
path = "src/main.rs"


[dependencies]
num = "0.4.0"
ordered-float = '2.8.0'
itertools = "0.10.1"
clap = { version = "2.33.3", features = ["yaml", "color", "suggestions"]}
structopt = "0.3.25"
strum = "0.23.0"
strum_macros = "0.23.0"
